# teamsync-api

./: .env_example.py  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/routers/: manager_router.py  users_router.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: Task.py  User.py  task.py  user.py
app/schemas/task/: TaskCreate.py  TaskOut.py
app/schemas/user/: UserDelete.py  UserLogin.py  UserOut.py  UserRegister.py
app/services/: task_service.py  user_service.py
